syntax = "proto3";

package user;

option go_package = "../protopb/user";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    bool role = 4;
}

message CreateUser {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    bool role = 5;
}

message ListUserResponse {
    repeated User users = 1;
}

message GetUserRequest {
    string id  = 1;
}

message ListUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string username = 2;
}

message DeleteUserRequest {
    string id = 1;
}

service userService {
    rpc CreateUsser(CreateUser) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc ListUser(ListUserRequest) returns (ListUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (User);
}